[gd_scene load_steps=3 format=3 uid="uid://dv3uxnkp8ekhg"]

[ext_resource type="Script" path="res://src/ui/building_ui/building_info_panel.gd" id="1_tj680"]

[sub_resource type="Theme" id="Theme_334wf"]
Label/font_sizes/font_size = 12

[node name="BuildingInfoPanel" type="Node2D"]
position = Vector2(572, 317)
script = ExtResource("1_tj680")

[node name="Margin" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.0
offset_top = -63.0
offset_right = 99.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="Margin"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Margin/PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Margin/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Margin/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Building Name"
horizontal_alignment = 1

[node name="DescLabel" type="Label" parent="Margin/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_334wf")
text = "Produce 5 Food per day"
horizontal_alignment = 1
autowrap_mode = 2
